# fire-iot

./: .gitignore  .gitmodules  AI_Project_Final.ipynb  README.md
device/: psudocode.c
fireServer/: install.sh  setup.md
fireServer/alarm_monitoring/: CMakeLists.txt
fireServer/alarm_monitoring/alarm_monitoring/: CMakeLists.txt  main.cpp  monitoring.h
fireServer/alarm_monitoring/alarm_monitoring/headers/: CMakeLists.txt  Communication.h  Gateway.h  MonitorApp.h  Storage.h  base64decode.h  logging.h
fireServer/alarm_monitoring/alarm_monitoring/lib/: CMakeLists.txt
fireServer/alarm_monitoring/alarm_monitoring/src/: CMakeLists.txt  MQTT_communication.cpp  MonitorApp.cpp  Packet_communication.cpp  Storage.cpp  logging.cpp  mainLogic.cpp
fireServer/apache_files/: admin.php  extra_admin.css  gateway.css  index.html  single_page.php
gateway/: create_table.sql  gateway.css  install.sh  psudocode.py  setup.md  single_page.php
gateway/GatewayRPI/: CMakeLists.txt  CMakeSettings.json
gateway/GatewayRPI/GatewayRPI/: CMakeLists.txt  GatewayRPI.cpp  GatewayRPI.h  main.cpp
gateway/GatewayRPI/GatewayRPI/headers/: CMakeLists.txt  Communication.h  Gateway.h  Storage.h  logging.h
gateway/GatewayRPI/GatewayRPI/lib/: CMakeLists.txt
gateway/GatewayRPI/GatewayRPI/src/: CMakeLists.txt  Communication.cpp  Gateway.cpp  LoRa_communication.cpp  MQTT_communication.cpp  Storage.cpp  logging.cpp
